# src/routes/index.ts
@@ -3,6 +3,7 @@ import billsRoutes from './bills.routes';
 import taxpayersRoutes from './taxpayers.routes';
 import paymentsRoutes from './payments.routes';
 import configurationRoutes from './configuration.routes';
+import analyticsRoutes from './analytics.routes';
 
 const router = Router();
 
@@ -15,5 +16,6 @@ router.use('/bills', billsRoutes);
 router.use('/taxpayers', taxpayersRoutes);
 router.use('/payments', paymentsRoutes);
 router.use('/configuration', configurationRoutes);
+router.use('/analytics', analyticsRoutes);
 
 export default router;
